--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SplashActivity">
+            android:name=".HelpCategory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
