--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name=".HelpCategory">
+
+        <activity android:name=".HelpCategory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
